fix collapsed panel style

--- a/portiaui/app/styles/components/tool-group.scss
+++ b/portiaui/app/styles/components/tool-group.scss
@@ -23,6 +23,7 @@
         flex-grow: 0 !important;
         flex-shrink: 0 !important;
         min-height: 0 !important;
+        overflow: hidden;
     }
 }
 
